# Arlo-Ai

./: .env.example  .gitignore  .gitmodules  .pyproject.toml.swp  LICENSE  README.md  assistant.py  env.yml  environment.yml  import_test.py  pyproject.toml  requirements.txt  run.py  win_env.yml
asset/: .gitignore  m.txt  read.txt  speech.py  stt.py  tts.py
asset/LLM/: __init__.py  clean.py  llm.py
asset/TTS/: __init__.py  play.py  tts.py
audio/: hotword_detection.py  stop_word.py
data/cache/: function_cache.json  history.json  prompt_classification_cache.json  queries.json  urls.json
data/cache/json/: -  function_cache.json  history.json  queries.json  urls.json
data/db/prompt_embeddings/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: About.js  Home.js  Settings.js
frontend/src/context/: AppContext.js
frontend/src/services/: socketService.js
src/actions/: actions.py  cmdpharser.py  function_define.py  function_registry.py
src/api/: api_handler.py  audio_handler.py  conn_handler.py  main.py  server.py  transcription_handler.py  websocket_conn.py
src/assistant/: __init__.py  main.py
src/audio/: central_manager.py  player.py  record.py
src/common/: __init__.py  config.py  logger.py
src/core/: error.py  event_bus.py  state.py
src/func/: __init__.py  cmdpharser.py  commands.py  function_define.py  function_registry.py  vision_func.py
src/llm/: __init__.py  model.py  utils.py
src/tool_classifier/: classifier_manager.py  llm_classifier.py  local_classifier.py
src/tts/: __init__.py  audio.py  engine.py  tts_manager.py  voices.py
src/url/: url_parser.py
src/utils/: config.py  helpers.py  logger.py  shared_resources.py
src/wake_word/: porcupine_detector.py  vad.py  wake_manager.py
(+21 files in other folders)
